using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    internal static string IsMoving = "IsMoving";
    internal static string IsRunning = "IsRunning";
    internal static string IsGrounded = "IsGrounded";
    internal static string Y_Velocity = "Y_Velocity";
    internal static string Jump = "Jump";
    internal static string IsOnWall = "IsOnWall";
    internal static string IsOnCeiling = "IsOnCeiling";
    internal static string Attack = "Attack";
    internal static string CanMove = "CanMove";
}

